--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
 spring.application.name=vietis
 
-# Cấu hình MySQL
+# C\u1EA5u h\u00ECnh MySQL
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/cs3
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Cấu hình Hibernate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# C\u1EA5u h\u00ECnh Hibernate
+spring.jpa.show-sql: true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Config for thymeleaf
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/**
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML
