--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,20 @@ spring.application.name=vietis
 
 # C\u1EA5u h\u00ECnh MySQL
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/cs3
+spring.datasource.url=jdbc:mysql://localhost:3306/cs3?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+tomcat.connection-properties = useUnicode=true;characterEncoding=utf-8
 
 # C\u1EA5u h\u00ECnh Hibernate
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql: true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # Config for thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
-spring.thymeleaf.prefix=classpath:/templates/**
+spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.mode=HTML
