--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,10 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.mode=HTML
+
+# Config session
+spring.session.store-type=jdbc
+spring.session.timeout=30m
+spring.session.jdbc.initialize-schema=always
+#server.servlet.session.timeout
+#spring.session.jdbc.table-name=SPRING_SESSION
