--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=vietis
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/cs3?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=Thaimeo170402
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 tomcat.connection-properties = useUnicode=true;characterEncoding=utf-8
 
@@ -30,3 +30,11 @@ spring.session.jdbc.initialize-schema=always
 
 # Config for Spring Batch
 spring.batch.jdbc.initialize-schema=always
+
+# Config for Send Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=quangthai170402@gmail.com
+spring.mail.password=fdba bowh abym pwda
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
